--- a/firstChip8.vcxproj.filters
+++ b/firstChip8.vcxproj.filters
@@ -23,6 +23,9 @@
     <ClCompile Include="main.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="chip8.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <Library Include="SDL2-2.0.14\lib\x64\SDL2main.lib">
